fixed search bar problem on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ a:hover {
 }
 
 .search-bar {
-  flex: auto;
+  width: 100%;
   height: 100%;
   border: none;
 
